# src/routes/api.ts
@@ -150,6 +150,17 @@ router.get(
   }]
   */
 );
+router.delete(
+  "/orders/:orderId",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  orderController.remove
+  /*
+  #swagger.tags = ['Order']
+  #swagger.security = [{
+    "bearerAuth": ""
+  }]
+  */
+);
 
 router.post(
   "/banners",
